[#105] refactor(user): Arrays.asList()를 List.of()로 변경하여 변경 가능 여부 차단